Working on Editor page

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_APIS_BASE_URL = https://xm-crm-react-exercise-server.herokuapp.com/
+REACT_APP_IMGS_BASE_URL = https://xm-crm-react-exercise-server.herokuapp.com/img/
